# php-mozart

./: .gitmodules  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
crates/mozart/: Cargo.toml
crates/mozart-archiver/: Cargo.toml
crates/mozart-archiver/src/: lib.rs  manager.rs
crates/mozart-autoload/: Cargo.toml
crates/mozart-autoload/src/: autoload.rs  dump.rs  lib.rs
crates/mozart-class-map-generator/: Cargo.toml
crates/mozart-console-macros/: Cargo.toml
crates/mozart-constraint/: Cargo.toml
crates/mozart-core/: Cargo.toml
crates/mozart-core/src/: advisory.rs  autoload.rs  composer.rs  config.rs  config_source.rs  config_validator.rs  console.rs  downloader.rs  factory.rs  http.rs  lib.rs  package.rs  package_info.rs  package_sorter.rs  platform.rs  repository.rs  repository_utils.rs  script_events.rs  suggest.rs  validation.rs  vcs.rs  version_bumper.rs  wildcard.rs
crates/mozart-core/src/advisory/: audit_config.rs  auditor.rs  ignored_security_advisory.rs  partial_security_advisory.rs  security_advisory.rs
crates/mozart-core/src/dependency_resolver/: decisions.rs  policy.rs  pool_builder.rs  problem.rs  request.rs  rule.rs  rule_set.rs  rule_set_generator.rs  rule_watch_graph.rs  solver.rs  transaction.rs
crates/mozart-core/src/downloader/: archive_downloader.rs  change_report_interface.rs  download_manager.rs  downloader_interface.rs  dvcs_downloader_interface.rs  file_downloader.rs  filesystem_exception.rs  fossil_downloader.rs  git_downloader.rs  gzip_downloader.rs  hg_downloader.rs  max_file_size_exceeded_exception.rs  path_downloader.rs  perforce_downloader.rs  phar_downloader.rs  rar_downloader.rs  svn_downloader.rs  tar_downloader.rs  transport_exception.rs  vcs_capable_downloader_interface.rs  vcs_downloader.rs  xz_downloader.rs  zip_downloader.rs
crates/mozart-core/src/installer/: installed_repo.rs  mod.rs  suggested_packages_reporter.rs
crates/mozart-core/src/package/: archiver.rs  complete_package_interface.rs  dumper.rs  package_interface.rs  version.rs
crates/mozart-core/src/package/archiver/: archive_manager.rs  manager.rs
crates/mozart-core/src/package/dumper/: array_dumper.rs
crates/mozart-core/src/package/version/: version_guesser.rs  version_parser.rs
crates/mozart-core/src/repository/: advisory.rs  browse_repos.rs  composer_repo.rs  download_manager.rs  downloader.rs  inline_package.rs  installed.rs  installer_executor.rs  lockfile.rs  packagist.rs  path_repository.rs  repository.rs  repository_filter.rs  resolver.rs  vcs.rs  vcs_bridge.rs  version.rs  version_selector.rs
crates/mozart-core/src/repository/installer_executor/: filesystem.rs  mod.rs  trace_recorder.rs  transaction.rs
crates/mozart-core/src/repository/repository/: inline_package_repo.rs  mod.rs  packagist_repo.rs  vcs_repo.rs
crates/mozart-core/src/repository/vcs/: forgejo_driver.rs  fossil_driver.rs  git_bitbucket_driver.rs  git_driver.rs  github_driver.rs  gitlab_driver.rs  hg_driver.rs  perforce_driver.rs  svn_driver.rs  vcs_driver.rs  vcs_driver_interface.rs
crates/mozart-core/src/util/: filesystem.rs
crates/mozart-core/src/vcs/: process.rs  repository.rs  version_guesser.rs
crates/mozart-core/src/vcs/downloader/: git.rs  hg.rs  svn.rs
crates/mozart-core/src/vcs/driver/: bitbucket.rs  forgejo.rs  git.rs  github.rs  gitlab.rs  hg.rs  mod.rs  svn.rs
crates/mozart-core/src/vcs/util/: git.rs  hg.rs  svn.rs
crates/mozart-core/tests/: git_driver_test.rs
crates/mozart-metadata-minifier/: Cargo.toml
crates/mozart-php-serialize/: Cargo.toml
crates/mozart-registry/: Cargo.toml
crates/mozart-registry/src/: advisory.rs  browse_repos.rs  cache.rs  composer_repo.rs  download_manager.rs  downloader.rs  inline_package.rs  installed.rs  lib.rs  lockfile.rs  packagist.rs  path_repository.rs  repository_filter.rs  resolver.rs  vcs_bridge.rs  version.rs  version_selector.rs
crates/mozart-registry/src/installer_executor/: filesystem.rs  mod.rs  trace_recorder.rs  transaction.rs
crates/mozart-registry/src/repository/: inline_package_repo.rs  mod.rs  packagist_repo.rs  vcs_repo.rs
crates/mozart-registry/tests/: poolbuilder.rs
crates/mozart-sat-resolver/: Cargo.toml
crates/mozart-semver/: Cargo.toml
crates/mozart-spdx-licenses/: Cargo.toml  build.rs
crates/mozart-test-harness/: Cargo.toml
crates/mozart-vcs/: Cargo.toml
crates/mozart-vcs/src/: process.rs  repository.rs  version_guesser.rs
crates/mozart-vcs/src/downloader/: git.rs  hg.rs  mod.rs  svn.rs
crates/mozart-vcs/src/driver/: bitbucket.rs  forgejo.rs  git.rs  github.rs  gitlab.rs  hg.rs  mod.rs  svn.rs
crates/mozart-vcs/src/util/: git.rs  hg.rs  mod.rs  svn.rs
crates/mozart-vcs/tests/: git_driver_test.rs
crates/mozart/src/: archiver.rs  autoload.rs  cache.rs  commands.rs  composer.rs  console.rs  constraint.rs  downloader.rs  exit_code.rs  factory.rs  installed.rs  lib.rs  lockfile.rs  main.rs  package.rs  packagist.rs  platform.rs  resolver.rs  suggest.rs  validation.rs  version.rs  version_bumper.rs
crates/mozart/src/commands/: about.rs  archive.rs  audit.rs  base_config.rs  browse.rs  bump.rs  check_platform_reqs.rs  clear_cache.rs  completion.rs  config.rs  config_helpers.rs  create_project.rs  dependency.rs  depends.rs  diagnose.rs  dump_autoload.rs  exec.rs  fund.rs  global.rs  init.rs  install.rs  licenses.rs  outdated.rs  prohibits.rs  reinstall.rs  remove.rs  repository.rs  require.rs  run_script.rs  search.rs  self_update.rs  show.rs  status.rs  suggests.rs  update.rs  validate.rs
crates/mozart/tests/: cli_about.rs  cli_all.rs  cli_config.rs  cli_dump_autoload.rs  cli_init.rs  cli_install.rs  cli_licenses.rs  cli_show.rs  cli_validate.rs  hash_helper.rs  installer.rs  installer_in_process.rs
crates/mozart/tests/common/: mod.rs
crates/mozart/tests/fixtures/minimal/: composer.json
crates/mozart/tests/fixtures/with_dev_deps/: composer.json
crates/mozart/tests/fixtures/with_installed/: composer.json
docs/: known-incompatibilities.md
scripts/: lint
scripts/linters/: cargo_workspace_dependencies.rb  no_mod_rs.rb  (+5 more)
src/: commands.rs
(+45 files in other folders)
