[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
mozart-constraint = { path = "crates/mozart-constraint" }
mozart-core = { path = "crates/mozart-core" }
mozart-archiver = { path = "crates/mozart-archiver" }
mozart-registry = { path = "crates/mozart-registry" }
mozart-autoload = { path = "crates/mozart-autoload" }
anyhow = "1.0.102"
bzip2 = "0.5.2"
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.66"
colored = "3.1.1"
dialoguer = "0.12.0"
filetime = "0.2.27"
flate2 = "1.1.9"
md5 = "0.7.0"
pubgrub = "0.3.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
self-replace = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
tar = "0.4.44"
tempfile = "3.25.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
assert_cmd = "2.1.2"
predicates = "3.1.4"
