[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
mozart-archiver = { path = "crates/mozart-archiver" }
mozart-autoload = { path = "crates/mozart-autoload" }
mozart-class-map-generator = { path = "crates/mozart-class-map-generator" }
mozart-core = { path = "crates/mozart-core" }
mozart-metadata-minifier = { path = "crates/mozart-metadata-minifier" }
mozart-registry = { path = "crates/mozart-registry" }
mozart-sat-resolver = { path = "crates/mozart-sat-resolver" }
mozart-semver = { path = "crates/mozart-semver" }
mozart-spdx-licenses = { path = "crates/mozart-spdx-licenses" }
anyhow = "1.0.102"
assert_cmd = "2.1.2"
bzip2 = "0.5.2"
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.66"
colored = "3.1.1"
dialoguer = "0.12.0"
filetime = "0.2.27"
flate2 = "1.1.9"
md5 = "0.7.0"
predicates = "3.1.4"
proc-macro2 = "1.0.106"
quote = "1.0.44"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
self-replace = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
syn = { version = "2.0.117", features = ["full", "parsing"] }
tar = "0.4.44"
tempfile = "3.25.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
