[package]
name = "mozart-archiver"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bzip2.workspace = true
flate2.workspace = true
regex.workspace = true
sha1.workspace = true
tar.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true
