[package]
name = "mozart-autoload"
version.workspace = true
edition.workspace = true

[dependencies]
mozart-core.workspace = true
mozart-registry.workspace = true
anyhow.workspace = true
md5.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
