[package]
name = "mozart-core"
version.workspace = true
edition.workspace = true

[dependencies]
mozart-console-macros.workspace = true
mozart-spdx-licenses.workspace = true
anyhow.workspace = true
colored.workspace = true
dialoguer.workspace = true
indexmap.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
