[package]
name = "mozart-registry"
version.workspace = true
edition.workspace = true

[dependencies]
mozart-constraint.workspace = true
mozart-core.workspace = true
mozart-metadata-minifier.workspace = true
anyhow.workspace = true
filetime.workspace = true
flate2.workspace = true
md5.workspace = true
pubgrub.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
tar.workspace = true
tempfile.workspace = true
tokio.workspace = true
zip.workspace = true
