[package]
name = "mozart-registry"
version.workspace = true
edition.workspace = true

[dependencies]
mozart-console-macros.workspace = true
mozart-core.workspace = true
mozart-metadata-minifier.workspace = true
mozart-php-serialize.workspace = true
mozart-sat-resolver.workspace = true
mozart-semver.workspace = true
mozart-vcs.workspace = true
anyhow.workspace = true
async-trait.workspace = true
filetime.workspace = true
flate2.workspace = true
indexmap.workspace = true
md5.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
tar.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
zip.workspace = true

[dev-dependencies]
mozart-test-harness.workspace = true
