[package]
name = "mozart-vcs"
version.workspace = true
edition.workspace = true

[dependencies]
mozart-core.workspace = true
mozart-semver.workspace = true
anyhow.workspace = true
base64.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
