[package]
name = "mozart"
version.workspace = true
edition.workspace = true

[dependencies]
mozart-archiver.workspace = true
mozart-autoload.workspace = true
mozart-core.workspace = true
mozart-registry.workspace = true
mozart-semver.workspace = true
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
colored.workspace = true
regex.workspace = true
reqwest.workspace = true
self-replace.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
