[package]
name = "mozart"
version.workspace = true
edition.workspace = true

[dependencies]
mozart-console-macros.workspace = true
mozart-core.workspace = true
mozart-semver.workspace = true
mozart-spdx-licenses.workspace = true
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
colored.workspace = true
indexmap.workspace = true
regex.workspace = true
reqwest.workspace = true
self-replace.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
tempfile.workspace = true
terminal_size.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
mozart-test-harness.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
